...
  final ValueNotifier<int> _tabIndexUpdateProgrammatically = ValueNotifier(0);
  final ValueNotifier<int> _tabIndexAdaptive = ValueNotifier(0);

  List<DataTab> get _listTextTabToggle => [
    DataTab(title: "Tab A (10)"),
    DataTab(title: "Tab B (5)"),
    DataTab(title: "Tab C (19)"),
  ];

  late final _listTextTabToggleCounter = [
    DataTab(
      title: "Tab A",
      counterWidget: Padding(
...
    DataTab(title: "Tab C (19)"),
  ];

  List<DataTab> get _listTextSelectedToggle => [
    DataTab(title: "Select A (10)"),
    DataTab(title: "Select B (5)"),
    DataTab(title: "Select C (19)"),
  ];

  List<DataTab> get _listIconTabToggle => [
    DataTab(icon: Icons.person),
    DataTab(icon: Icons.pregnant_woman),
  ];

  List<DataTab> get _listGenderText => [
    DataTab(title: "Male", icon: Icons.person),
    DataTab(title: "Female", icon: Icons.pregnant_woman),
  ];

  List<DataTab> get _listAdaptiveTabs => [
    DataTab(title: 'AAAA'),
    DataTab(title: 'AAAAAAAAAAAAAAA'),
  ];

  @override
  void dispose() {
    _tabIndexBasicToggle.dispose();
    _tabIndexBasicToggleCounter.dispose();
...

  Widget _basicTabToggle() => Column(
    children: [
      /// Basic Toggle Sample
      SizedBox(height: heightInPercent(3, context)),
      const Text(
        "Basic Tab Toggle",
        style: TextStyle(fontSize: 20, fontStyle: FontStyle.italic),
      ),
      SizedBox(height: heightInPercent(3, context)),
      ValueListenableBuilder(
        valueListenable: _tabIndexBasicToggle,
        builder: (context, currentIndex, _) {
...
    ],
  );

  Widget _adaptiveTabToggle() => Column(
    children: [
      const Text(
        'Adaptive Tab Width',
        style: TextStyle(fontSize: 20, fontStyle: FontStyle.italic),
      ),
      SizedBox(height: heightInPercent(3, context)),
      ValueListenableBuilder(
        valueListenable: _tabIndexAdaptive,
        builder: (context, currentIndex, _) => FlutterToggleTab(
...

  Widget _textWithIcon() => Column(
    children: [
      /// Text with icon sample
      SizedBox(height: heightInPercent(3, context)),
      const Text(
        "Text With Icon",
        style: TextStyle(fontSize: 20, fontStyle: FontStyle.italic),
      ),
      Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
    ],
  );

  Widget _updateProgrammatically() => Column(
    children: [
      const Text(
        "Update selected programmatically  ",
        style: TextStyle(fontSize: 20, fontStyle: FontStyle.italic),
      ),
      Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
