appId: com.example.example
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
      text: "Update selected programmatically  "
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd
- tapOn: "Select C"
- waitForAnimationToEnd
- assertVisible: "Selected gender index: 2 "
